<resources>
    <string name="app_name">News</string>

    <string name="facebook_app_id">1646201155688417</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!--LoginActivity-->
    <string name="login_bt_sign_in_by_emil_title">Увійти</string>
    <string name="login_et_email_hint">Email</string>
    <string name="login_et_password_hint">Пароль</string>
    <string name="login_create_account">Створити аккаунт?</string>
    <string name="tv_login_forgot_password">Забули пароль?</string>

    <!--RegistrationActivity-->
    <string name="registration_et_name_hint">Повне ім`я</string>
    <string name="registration_et_email_hint">Email</string>
    <string name="registration_et_password_hint">Пароль</string>
    <string name="registration_et_repeat_password_hint">Повторіть пароль</string>
    <string name="registration_bt_submit_title">Зареєструватися</string>
    <string name="registration_tv_already_have_an_account">Вже маєте аккаунт?</string>
    <string name="toast_msg_sent_password_reset_instructions">Інструкції по відновленю пароля надіслані на електронну пошту.</string>


    <string name="dialog_reset_pass_submit">Відправити</string>
    <string name="dialog_reset_pass_title">Відновлення паролю</string>
    <!--NewsFragment-->
    <string name="frag_news_no_newses">Помилка завантаження! Перевірте з`єднання з інтернетом, та спробуйте знову</string>

    <!--FavoritesFragment-->
    <string name="frag_favorites_no_favorites_yet">У вас відсутні обрані новини.</string>

    <!--NewsFromFriendsFragment-->
    <string name="frag_news_from_friends_no_newses_yet">Новини відсутні.</string>

    <!--Toasts-->
    <string name="toast_msg_connection_error">Відсутній зв`язок з мережею!</string>

    <!--ArticleItem-->
    <string name="article_item_share_by_app">Поділитися через додаток</string>
    <string name="article_item_share_by_google">Поділитися через g+</string>
    <string name="article_item_share_by_facebook">Поділитися через facebook</string>

    <!--String related to Drawer Menu -->
    <string name="draw_menu_main">Головна</string>
    <string name="draw_menu_group_navigation">Навігіція</string>
    <string name="draw_menu_favorites">Обране</string>
    <string name="draw_menu_news_from_friends">Друзі</string>
    <string name="draw_menu_sources">Ресурси</string>
    <string name="draw_menu_settings">Налаштування</string>
    <string name="draw_menu_sign_out">Вийти</string>


    <string name="share_available_for_facebook_users">Функція доступна лише для користувачів facebook</string>
    <string name="notification_there_newses_fom_friends">У вас є новини від друзів</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>


    <string name="pref_header_data_sync">Data &amp; sync</string>

    <!--Preference screen-->
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="pref_key_sync_frequency">pref_key_sync_frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_key_image_size">pref_key_image_size</string>
    <string name="pref_title_image_size">Image size</string>
    <string-array name="pref_image_size_titles">
        <item>360px</item>
        <item>480px</item>
        <item>768px</item>
        <item>1024px</item>
        <item>original</item>
    </string-array>
    <string-array name="pref_image_size_values">
        <item>360</item>
        <item>480</item>
        <item>768</item>
        <item>1024</item>
        <item>1</item>
    </string-array>


    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_additional_newses">AdditionalNewses</string>
    <!--string name="default_web_client_id">AIzaSyCAzMJfVF_0Vh4Z_oyGQx5oiwGWnTMg_rs</string-->
</resources>
