<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_main"
        android:icon="@drawable/ic_menu_camera"
        android:title="@string/draw_menu_main" />
    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/draw_menu_favorites" />
    <item
        android:id="@+id/nav_news_from_friends"
        android:icon="@drawable/ic_menu_slideshow"
        android:title="@string/draw_menu_news_from_friends" />
    <item
        android:id="@+id/nav_sources"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/draw_menu_sources" />
    <item
        android:id="@+id/nav_settings"
        android:title="@string/draw_menu_settings" />
    <item
        android:id="@+id/nav_sign_out"
        android:title="@string/draw_menu_sign_out" />


</menu>
