<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    tools:context="com.example.nikit.news.ui.activity.LoginActivity">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/login_by_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/app_icon"
            android:layout_gravity="center_horizontal"/>
        <EditText
            android:id="@+id/et_auth_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_et_height"
            android:hint="@string/login_et_email_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_auth_pass"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/login_et_password_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/bt_login_by_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_et_height"
            android:background="@drawable/rounded_button"
            android:text="@string/login_bt_sign_in_by_emil_title"
            android:textColor="#fff"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/dfsdfs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/login_by_facebook"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@drawable/facebook_button_states"
                android:text="f"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="25dp" />

            <Button
                android:id="@+id/bt_login_by_google"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@drawable/google_button_states"
                android:text="g+"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="25dp" />

        </LinearLayout>
        <TextView
            android:layout_gravity="center"
            android:id="@+id/tv_create_account"
            style="?borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_create_account"
            android:textAllCaps="false"
            />

    </LinearLayout>


</RelativeLayout>
